# credit_score

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
app/: README.md  main.py  model_columns.pkl  pyproject.toml  user.py
app/app/: main.py  validation.py
app/app/database/: bank.db  connection.py  newclients.db  table.py
notebooks/: CreditScore EDA.ipynb  CreditScore_EDA.ipynb  CreditScore_Model.ipynb
