[tool.poetry]
name = "credit-score"
version = "0.1.0"
description = "alis test"
authors = ["beckortikov <erifieder@gmail.com>"]
readme = "README.md"
packages = [{include = "credit_score"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.10.2"
fastapi = "^0.87.0"
uvicorn = "^0.19.0"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
