[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["beckortikov <erifieder@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.87.0"
uvicorn = "^0.20.0"
pandas = "^1.5.2"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
